Updated memos.css to ensure that delete button is hidden by default and only appears on hover or on touch devices

--- a/src/components/memo/Memo.scss
+++ b/src/components/memo/Memo.scss
@@ -14,18 +14,18 @@
     opacity: $memo-tile-editing-opacity;
   }
 
-  .memo-delete-button {
+  button {
     display: none;
   }
 
-  &:hover .memo-delete-button {
+  &:hover button {
     display: inherit;
   }
 }
 
 @media (hover: none), (-moz-touch-enabled) {
   .memo {
-    .memo-delete-button {
+    button {
       display: inherit;
     }
   }
